tests/negative/array_var_after_while_oob_index_assign.far
fun main() -> i64 {
  a = [1, 2, 3]
  i = 0
  while (i < 3) {
    i = i + 1
  }
  a[i] = 99
  return 0
}
